# servstat

./: README.md  logging.json  pyproject.toml  requirements.txt  sites.csv
.github/workflows/: run-test.yml
servstat/: cli.py
